# nonlinear-system-theory

./: .gitignore  README.md  hw2_5.py  hw2_7.py  hw4_4.py
midterm/: hw4-5.py  mt1.py  mt1_test.py  mt2.py  mt7.py  phase_portrait.py
project/: CMakeLists.txt
project/include/spacecraft_sim/: dynamics.h  rosflight_holodeck_board.h  spacecraft.h  spacecraft_sim.h  state.h
project/python/: rotations.py  spacecraft_sim.py
project/src/: dynamics.cpp  rosflight_holodeck_board.cpp  spacecraft.cpp  spacecraft_sim.cpp
